--- a/opentreemap/treemap/templates/registration/registration_complete.html
+++ b/opentreemap/treemap/templates/registration/registration_complete.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="content login-signup">
   <div class="well login-signup-panel">
-    <legend>{% trans "Account Created!" %}</legend>
+    <legend>{% trans "Account created!" %}</legend>
 	  <p>{% trans "Your OpenTreeMap account has been created. You will receive an activation email shortly; please use it to confirm your account." %}</p>
   </div>
 </div>
