--- a/opentreemap/treemap/css/sass/partials/pages/_registration.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_registration.scss
@@ -13,6 +13,14 @@
         margin: 30px 20px 15px;
     }
 
+    p {
+        &.margin-top {
+            margin-top: 15px;
+        }
+        &.margin-bottom {
+            margin-bottom: 15px;
+        }
+    }
     legend {
         padding: 0 20px 15px 20px;
         font-size: 2.4rem;
@@ -113,9 +121,13 @@
     border-radius: 3px;
 }
 
-label[for="id_allow_email_contact"], label[for="id_make_info_public"] {
-    width: 75%;
+label[for="id_allow_email_contact"] {
+    width: 85%;
     margin-bottom: 15px;
+}
+label[for="id_make_info_public"] {
+    width: 85%;
+    margin: 15px 0 5px;
 }
 
 #id_allow_email_contact, #id_make_info_public {
@@ -123,6 +135,9 @@ label[for="id_allow_email_contact"], label[for="id_make_info_public"] {
     width: 15px;
     clear: none;
     margin: 2px 10px 0 0;
+}
+#id_make_info_public {
+    margin-top: 17px;
 }
 
 @media (max-width: 767px) {
