Fixes OpenTreeMap/otm2-addons#133

--- a/opentreemap/treemap/css/sass/partials/pages/_registration.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_registration.scss
@@ -49,7 +49,7 @@
             }
             > label {
                 &:after {
-                    content: ':';
+                    content: '';
                 }
             }
             > input {
@@ -60,7 +60,7 @@
         div.required {
             > label {
                 &:after {
-                    content: ': *';
+                    content: ' *';
                 }
             }
         }
