Continue styling/building simulation modeling prototypes

--- a/opentreemap/treemap/css/sass/main.scss
+++ b/opentreemap/treemap/css/sass/main.scss
@@ -32,3 +32,4 @@
 @import "partials/pages/content";
 @import "partials/pages/photos";
 @import "partials/pages/lightbox";
+@import "partials/pages/modeling";
