Fixes OpenTreeMap/otm2-addons#158
Conflicts:

	opentreemap/treemap/css/sass/partials/pages/_addtree.scss

--- a/opentreemap/treemap/css/sass/partials/pages/_addtree.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_addtree.scss
@@ -96,7 +96,7 @@
                 select {
                     font-size: 1.2rem;
                 }
-                span {
+                span:not('.input-group-addon') {
                     display: block;
                 }
                 .twitter-typeahead{
