--- a/opentreemap/treemap/css/sass/main.scss
+++ b/opentreemap/treemap/css/sass/main.scss
@@ -34,3 +34,4 @@
 @import "partials/pages/lightbox";
 @import "partials/pages/modeling";
 @import "partials/pages/scenarios";
+@import "partials/pages/moderation";
