--- a/opentreemap/treemap/templates/treemap/partials/search_location.html
+++ b/opentreemap/treemap/templates/treemap/partials/search_location.html
@@ -2,7 +2,7 @@
 
 <!-- Location Search -->
 <div class="search-block">
-  <h3>{% trans "Search by Location" %}</h3>
+  <label>{% trans "Search by Location" %}</label>
   <div class="search-field-group">
     <a class="typeahead-toggle" id="boundary-toggle"><i class="icon-menu"></i></a>
     <input type="text" data-class="search" id="boundary-typeahead" class="form-control" placeholder="Address, City, State"/>
