--- a/opentreemap/treemap/templates/treemap/partials/search_species.html
+++ b/opentreemap/treemap/templates/treemap/partials/search_species.html
@@ -2,7 +2,7 @@
 
 <!--Species Search-->
 <div class="search-block visible-md visible-lg">
-  <h3>{% trans "Search by Species" %}</h3>
+  <label>{% trans "Search by Species" %}</label>
   <div class="search-field-group">
     <a class="typeahead-toggle" id="species-toggle"><i class="icon-menu"></i></a>
     <input type="text" data-class="search" id="species-typeahead" class="form-control" placeholder="Common or Scientific Name"/>
