--- a/opentreemap/treemap/css/sass/partials/_header.scss
+++ b/opentreemap/treemap/css/sass/partials/_header.scss
@@ -46,12 +46,9 @@
         margin-left: 10px;
         width: 245px;
 
-        h3 {
-            font-size: 1.4rem;
-            font-weight: 400;
-            line-height: 1.6rem;
-            margin: 0 0 6px;
-            color: $navbar-color;
+        label {
+            display: block;
+            margin-top: -2px;
         }
 
         .search-field-group {
