Refactor JS code for map pages
* Create `mapPage.js` to contain reusable code from tree map page
* Rename `map.js` as `treeMap.js`

--- a/opentreemap/treemap/templates/treemap/map.html
+++ b/opentreemap/treemap/templates/treemap/map.html
@@ -11,10 +11,10 @@
 <script>
 (function(require) {
     var $ = require("jquery"),
-        map = require("treemap/map");
+        treeMap = require("treemap/treeMap");
 
     $(function(){
-        map.initMapPage(otm.settings);
+        treeMap.init(otm.settings);
     })
 })(require);
 </script>
