Add up new scenarios prototype

--- a/opentreemap/treemap/css/sass/main.scss
+++ b/opentreemap/treemap/css/sass/main.scss
@@ -33,3 +33,4 @@
 @import "partials/pages/photos";
 @import "partials/pages/lightbox";
 @import "partials/pages/modeling";
+@import "partials/pages/scenarios";
