--- a/opentreemap/treemap/css/sass/partials/pages/_scenarios.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_scenarios.scss
@@ -3,7 +3,7 @@
     > .sidebar-inner {
 
         > h3 {
-            padding: 22px 20px 22px;
+            padding: 18px 16px 16px;
             margin: 0;
             font-size: 2.1rem;
             background: $secondary-color;
@@ -24,27 +24,65 @@
             left: 0;
             right: 0;
             bottom: 0;
-            top: 67px;
+            top: 55px;
         }
         .add-step {
             .add-step-content {
                 padding: 20px;
                 position: absolute;
-                bottom: 60px;
+                bottom: 105px;
                 top: 0;
                 overflow-y: auto;
                 left: 0;
                 right: 0;
 
                 .content-header {
-                    margin: 15px -20px;
+                    margin: 0 -20px;
                     background: $light-gray-color;
-                    padding: 8px 20px;
+                    color: darken($subtext-color, 10%);
+                    padding: 8px 16px;
                     font-size: 1.2rem;
                     font-weight: 700;
 
                     &:first-of-type {
                         margin-top: -20px;
+                    }
+
+                    a {
+                        border-bottom: 1px dotted;
+                    }
+                }
+                .content-empty {
+                    padding: 15px 0 20px;
+                    margin: 0;
+                }
+                .content-row {
+                    border-bottom: 1px solid $light-gray-color;
+                    margin: 0 -20px;
+                    padding: 6px 20px 14px;
+
+                    > .row {
+                        margin-left: -10px;
+                        margin-right: -10px;
+
+                        > div {
+                            padding-left: 5px;
+                            padding-right: 5px;
+
+                            a {
+                                float: right;
+                                padding: 6px 0;
+                                margin-top: 24px;
+                                text-align: right;
+                            }
+                            label {
+                                font-size: 1.1rem;
+                                font-weight: 700;
+                            }
+                            input.form-control {
+                                font-size: 1.2rem;
+                            }
+                        }
                     }
                 }
 
@@ -71,10 +109,40 @@
                     position: relative;
                     margin: 13px 0;
                 }
-              .footer-step-number:before {
-                  content: counter(steps);
-              }
+                .calculate {
+                    margin: 0 -20px 0;
+
+                    .btn {
+                        border-radius: 0;
+                    }
+                }
+                .footer-step-number:before {
+                    content: counter(steps);
+                }
             }
+        }
+    }
+}
+
+#map {
+    .map-popover {
+        background: black;
+        background: rgba(0,0,0,0.85);
+        max-width: 600px;
+        position: absolute;
+        bottom: 20px;
+        left: 50%;
+        margin-left: -300px;
+        padding: 8px 36px 10px 16px;
+        font-size: 1.2rem;
+        color: white;
+        border-radius: 6px;
+
+        .close {
+            margin-right: -20px;
+            color: #FFF;
+            font-weight: 300;
+            outline: none;
         }
     }
 }
