Add Validation to Forgot Username
Added a ```required``` HTML5 attribute to prevent submitting an empty username
and we throw an appropriate error if a blank username is sent to the
server. Fixes #1374!

--- a/opentreemap/treemap/templates/treemap/forgot_username.html
+++ b/opentreemap/treemap/templates/treemap/forgot_username.html
@@ -13,7 +13,7 @@
       </label>
       <div class="row">
           <div class="col-md-9">
-              <input type="email" name="email" />
+              <input type="email" name="email" required />
           </div>
           <div class="col-md-3">
               <input type="submit" class="btn btn-block btn-primary" value="{% trans 'Send' %}" />
