Handle unstructured text errors from ecoservice
fixes #1542 on github

This is a stopgap until the ecoservice can return JSON errors.

--- a/opentreemap/treemap/templates/treemap/partials/plot_eco.html
+++ b/opentreemap/treemap/templates/treemap/partials/plot_eco.html
@@ -7,6 +7,12 @@
   <p>The tree's location falls within a climate region that does not support benefit calculations for this species.</p>
   {% endblocktrans %}
 </div>
+{% elif unknown_ecobenefit_error %}
+  {% blocktrans %}
+  <!-- TODO: When the ecoservice returns structured errors, replace this with real conditions -->
+  <!-- Or, maybe always leave this to avoid 500s -->
+  <p>{% trans "We were unable to calculate ecosystem benefits for this tree."}</p>
+  {% endblocktrans %}
 {% elif benefits.plot %}
 <table class="table table-hover">
   <tbody>
